--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -28,12 +28,12 @@
 /* ***Colors*** */
 
 :root[data-theme="default"] {
-  --primary-color: #5B5CB9;
-  --secondary-color: #F77E0B;
-  --secondary-background: #8DDFEA;
-  --main-background: #ffffff; /*white for light themes*/
-  --text-color-dark: #494e4e; /*dark gray for light themes*/
-  --text-color-light: #ffffff; /*dark gray for light themes*/
+  --primary-color: #363062;
+  --secondary-color: #F99417;
+  --secondary-background: #4D4C7D;
+  --main-background: #F5F5F5; /*white for light themes*/
+  --text-color-dark: #2C3333; /*dark gray for light themes*/
+  --text-color-light: #e2e2e2; /*dark gray for light themes  #CBE4DE */
   --light-gray: #e2e2e2; /*light gray*/
 }
 
