create a reactive login form

--- a/src/components/input-password/input-password.component.html
+++ b/src/components/input-password/input-password.component.html
@@ -1,6 +1,6 @@
 <div class="field d-flex flex-column gap-1 password-container">
   <label for="password" class="form-label m-0 fw-bold">{{label}}</label>
-  <input class="form-control m-0" type="{{showPassword ? 'text' : 'password'}}" placeholder="{{placeholder}}" />
+  <input class="form-control m-0" type="{{showPassword ? 'text' : 'password'}}" placeholder="{{placeholder}}" [value]="value" (input)="onInput($event)" (blur)="onBlur()" />
   <span (click)="togglePasswordType()">
     <i [ngClass]="{'bi-eye': !showPassword, 'bi-eye-slash':showPassword}" class="bi eye-icon"></i>
   </span>
