--- a/src/components/reset-password/reset-password.component.html
+++ b/src/components/reset-password/reset-password.component.html
@@ -12,8 +12,8 @@
             <input type="text" id="username" class="form-control m-0" placeholder="کد دریافتی">
             <span data-type="input-validation-alert"></span>
           </div>
-          <password [label]="'رمز عبور جدید'" [placeholder]="'رمز عبور جدید'"></password>
-          <password [label]="'تکرار رمز عبور جدید'" [placeholder]="'تکرار رمز عبور جدید'"></password>
+          <input-password [label]="'رمز عبور جدید'" [placeholder]="'رمز عبور جدید'"></input-password>
+          <input-password [label]="'تکرار رمز عبور جدید'" [placeholder]="'تکرار رمز عبور جدید'"></input-password>
           <div class="field d-flex flex-column gap-1">
             <label class="form-label m-0 fw-bold">کد امنیتی</label>
             <div class="captcha-field form-control container py-0">
