create reactive forgot and reset password forms

--- a/src/components/forget-password/forget-password.component.html
+++ b/src/components/forget-password/forget-password.component.html
@@ -6,10 +6,10 @@
           <img class="logo-img" src="../../../assets/images/Mobin-Logo.png" />
           <strong data-type="primary-title">فراموشی رمز عبور</strong>
         </div>
-        <form class="authentication-form d-flex flex-column gap-3" method="post">
+        <form class="authentication-form d-flex flex-column gap-3" [formGroup]="form" (ngSubmit)="onSubmit()">
           <div class="field d-flex flex-column gap-1">
             <label for="username" class="form-label m-0 fw-bold">شماره همراه</label>
-            <input type="text" id="username" class="form-control m-0" placeholder="شماره همراه">
+            <input type="text" class="form-control m-0" placeholder="شماره همراه" formControlName="phoneNumber">
             <span data-type="input-validation-alert"></span>
           </div>
           <div class="field d-flex flex-column gap-1">
@@ -17,7 +17,7 @@
             <div class="captcha-field form-control container py-0">
               <div class="row d-flex align-items-center justify-content-between">
                 <div class="col-4 input-container d-flex flex-column">
-                  <input class="h-100" type="text" placeholder="کد امنیتی">
+                  <input class="h-100" type="text" placeholder="کد امنیتی" formControlName="captchaCode">
                 </div>
                 <div class="col-8 d-flex align-items-center justify-content-end px-0">
                   <div class="col-10 captcha-image p-0">
