--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -6,7 +6,7 @@
           <img class="logo-img" src="../../../assets/images/Mobin-Logo.png" />
           <strong data-type="primary-title">ورود به سیستم پشتیبانی</strong>
         </div>
-        <form class="authentication-form d-flex flex-column gap-3" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <form class="authentication-form d-flex flex-column gap-3" [formGroup]="form" (ngSubmit)="onSubmit()">
           <div class="field d-flex flex-column gap-1">
             <label for="username" class="form-label m-0 fw-bold">نام کاربری</label>
             <input type="text" id="username" class="form-control m-0" formControlName="username" placeholder="نام کاربری">
