--- a/src/components/reset-password/reset-password.component.html
+++ b/src/components/reset-password/reset-password.component.html
@@ -6,20 +6,20 @@
           <img class="logo-img" src="../../../assets/images/Mobin-Logo.png" />
           <strong data-type="primary-title">بازیابی رمز عبور</strong>
         </div>
-        <form class="authentication-form d-flex flex-column gap-3" method="post">
+        <form class="authentication-form d-flex flex-column gap-3" [formGroup]="form" (ngSubmit)="onSubmit()">
           <div class="field d-flex flex-column gap-1">
             <label for="username" class="form-label m-0 fw-bold">کد دریافتی</label>
-            <input type="text" id="username" class="form-control m-0" placeholder="کد دریافتی">
+            <input type="text" id="username" class="form-control m-0" placeholder="کد دریافتی" formControlName="otpCode">
             <span data-type="input-validation-alert"></span>
           </div>
-          <input-password [label]="'رمز عبور جدید'" [placeholder]="'رمز عبور جدید'"></input-password>
-          <input-password [label]="'تکرار رمز عبور جدید'" [placeholder]="'تکرار رمز عبور جدید'"></input-password>
+          <input-password [label]="'رمز عبور جدید'" [placeholder]="'رمز عبور جدید'" formControlName="newPassword"></input-password>
+          <input-password [label]="'تکرار رمز عبور جدید'" [placeholder]="'تکرار رمز عبور جدید'" formControlName="RepeatNewPassword"></input-password>
           <div class="field d-flex flex-column gap-1">
             <label class="form-label m-0 fw-bold">کد امنیتی</label>
             <div class="captcha-field form-control container py-0">
               <div class="row d-flex align-items-center justify-content-between">
                 <div class="col-4 input-container d-flex flex-column">
-                  <input class="h-100" type="text" placeholder="کد امنیتی">
+                  <input class="h-100" type="text" placeholder="کد امنیتی" formControlName="captchaCode">
                 </div>
                 <div class="col-8 d-flex align-items-center justify-content-end px-0">
                   <div class="col-10 captcha-image p-0">
