--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -40,7 +40,7 @@
         </form>
         <div>
           <p class="d-flex justify-content-center mt-3">
-            <a routerLink="/forget-password" data-type="hyper-link" class="d-block">فراموشی رمز عبور</a>
+            <a routerLink="/forgot-password" data-type="hyper-link" class="d-block">فراموشی رمز عبور</a>
           </p>
         </div>
       </div>
