--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 @import "styles/bootstrap.scss";
 @import "styles/mixins.scss";
 @import "styles/variables.scss";
+@import 'bootstrap-icons/font/bootstrap-icons.css';
+
 
 * {
   margin: 0;
