edit reset password structure

--- a/src/components/forget-password/forget-password.component.html
+++ b/src/components/forget-password/forget-password.component.html
@@ -23,11 +23,9 @@
                   <div class="col-10 captcha-image p-0">
                     <img id="captchaImage" class="img-fluid" src="../../../assets/images/captcha.png" height="48" width="180" alt="تصویر امنیتی" />
                   </div>
-                  <div class="col-2 refresh-captcha d-flex justify-content-center">
-                    <a class="change-captcha">
-                      <i class="bi bi-arrow-clockwise"></i>
-                    </a>
-                  </div>
+                  <a class="refresh-captcha d-flex justify-content-center col-2">
+                    <i class="bi bi-arrow-clockwise"></i>
+                  </a>
                 </div>
               </div>
             </div>
