--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -24,11 +24,9 @@
                   <div class="col-10 captcha-image p-0">
                     <img class="img-fluid" src="../../../assets/images/captcha.png" height="48" width="180" alt="تصویر امنیتی" />
                   </div>
-                  <div class="col-2 refresh-captcha d-flex justify-content-center">
-                    <a class="change-captcha">
+                    <a class="refresh-captcha d-flex justify-content-center col-2">
                       <i class="bi bi-arrow-clockwise"></i>
                     </a>
-                  </div>
                 </div>
               </div>
             </div>
