--- a/src/components/reset-password/reset-password.component.html
+++ b/src/components/reset-password/reset-password.component.html
@@ -1,54 +1,51 @@
 <div class="authentication-page d-flex align-items-center justify-content-center min-vh-100">
-  <div class="container">
-    <div class="row shadow-lg rounded-4">
-      <div class="authentication-right col-12 col-lg-6">
-        <div class="d-flex flex-column align-items-center justify-content-center">
-          <img class="logo-img" src="../../../assets/images/Mobin-Logo.png" />
-          <strong data-type="primary-title">بازیابی رمز عبور</strong>
+  <div class="row shadow-lg rounded-4">
+    <div class="authentication-right col-12 col-lg-6">
+      <div class="d-flex flex-column align-items-center justify-content-center">
+        <img class="logo-img" src="../../../assets/images/Mobin-Logo.png" />
+        <strong data-type="primary-title">بازیابی رمز عبور</strong>
+      </div>
+      <form class="authentication-form d-flex flex-column gap-3" [formGroup]="form" (ngSubmit)="onSubmit()">
+        <div class="field d-flex flex-column gap-1">
+          <label for="otpCode" class="form-label m-0 fw-bold">کد دریافتی</label>
+          <input type="text" class="form-control m-0" id="otpCode" placeholder="کد دریافتی" formControlName="otpCode">
+          <span data-type="input-validation-alert"></span>
         </div>
-        <form class="authentication-form d-flex flex-column gap-3" [formGroup]="form" (ngSubmit)="onSubmit()">
-          <div class="field d-flex flex-column gap-1">
-            <label for="username" class="form-label m-0 fw-bold">کد دریافتی</label>
-            <input type="text" id="username" class="form-control m-0" placeholder="کد دریافتی" formControlName="otpCode">
-            <span data-type="input-validation-alert"></span>
-          </div>
-          <input-password [label]="'رمز عبور جدید'" [placeholder]="'رمز عبور جدید'" formControlName="newPassword"></input-password>
-          <input-password [label]="'تکرار رمز عبور جدید'" [placeholder]="'تکرار رمز عبور جدید'" formControlName="RepeatNewPassword"></input-password>
-          <div class="field d-flex flex-column gap-1">
-            <label class="form-label m-0 fw-bold">کد امنیتی</label>
-            <div class="captcha-field form-control container py-0">
-              <div class="row d-flex align-items-center justify-content-between">
-                <div class="col-4 input-container d-flex flex-column">
-                  <input class="h-100" type="text" placeholder="کد امنیتی" formControlName="captchaCode">
+        <input-password [label]="'رمز عبور جدید'" [placeholder]="'رمز عبور جدید'" formControlName="newPassword"></input-password>
+        <input-password [label]="'تکرار رمز عبور جدید'" [placeholder]="'تکرار رمز عبور جدید'" formControlName="repeatNewPassword"></input-password>
+        <div class="field d-flex flex-column gap-1">
+          <label for="captchaCode" class="form-label m-0 fw-bold">کد امنیتی</label>
+          <div class="captcha-field form-control container py-0">
+            <div class="row d-flex align-items-center justify-content-between">
+              <div class="col-4 input-container d-flex flex-column">
+                <input type="text" class="h-100" id="captchaCode" placeholder="کد امنیتی" formControlName="captchaCode">
+              </div>
+              <div class="col-8 d-flex align-items-center justify-content-end px-0">
+                <div class="col-10 captcha-image p-0">
+                  <img class="img-fluid" src="../../../assets/images/captcha.png" height="48" width="180" alt="تصویر امنیتی" />
                 </div>
-                <div class="col-8 d-flex align-items-center justify-content-end px-0">
-                  <div class="col-10 captcha-image p-0">
-                    <img class="img-fluid" src="../../../assets/images/captcha.png" height="48" width="180" alt="تصویر امنیتی" />
-                  </div>
-                  <div class="col-2 refresh-captcha d-flex justify-content-center">
-                    <a class="change-captcha">
-                      <i class="bi bi-arrow-clockwise"></i>
-                    </a>
-                  </div>
+                <div class="col-2 refresh-captcha d-flex justify-content-center">
+                  <a class="refresh-captcha d-flex justify-content-center col-2">
+                    <i class="bi bi-arrow-clockwise"></i>
+                  </a>
                 </div>
               </div>
             </div>
-            <span data-type="input-validation-alert"></span>
           </div>
-          <div class="field mt-4">
-            <button type="submit" class="w-100" data-type="primary-button">تایید</button>
-          </div>
-        </form>
-        <div>
-          <p class="d-flex justify-content-center mt-3">
-            <a routerLink="/login" data-type="hyper-link" class="d-block">بازگشت به صفحه ورود</a>
-          </p>
+          <span data-type="input-validation-alert"></span>
         </div>
+        <div class="field mt-4">
+          <button type="submit" class="w-100" data-type="primary-button">تایید</button>
+        </div>
+      </form>
+      <div>
+        <p class="d-flex justify-content-center mt-3">
+          <a routerLink="/login" data-type="hyper-link" class="d-block">بازگشت به صفحه ورود</a>
+        </p>
       </div>
-      <div class="authentication-left col-12 col-lg-6 d-flex flex-column justify-content-end p-0">
-        <img src="../../../assets/images/customer-support.png" />
-      </div>
+    </div>
+    <div class="authentication-left col-12 col-lg-6 d-flex flex-column justify-content-end p-0">
+      <img src="../../../assets/images/customer-support.png" />
     </div>
   </div>
 </div>
-
