--- a/src/styles.scss
+++ b/src/styles.scss
@@ -117,8 +117,9 @@ a {
   width: 180px;
 }
 
-.change-captcha > i {
+.refresh-captcha > i {
   color: var(--primary-color);
+  height: 16px;
 
   &:hover {
     color: var(--secondary-color);
@@ -134,6 +135,11 @@ a {
     object-fit: cover;
   }
 }
+
+input.ng-invalid.ng-touched {
+  border-color: red;
+}
+
 
 /* RESPONSIVE */
 
