manage input validation messages

--- a/src/components/forget-password/forget-password.component.html
+++ b/src/components/forget-password/forget-password.component.html
@@ -10,7 +10,7 @@
           <div class="field d-flex flex-column gap-1">
             <label for="username" class="form-label m-0 fw-bold">شماره همراه</label>
             <input type="text" class="form-control m-0" placeholder="شماره همراه" formControlName="phoneNumber">
-            <span data-type="input-validation-alert"></span>
+            <span data-type="input-validation-alert" *ngIf="form.get('phoneNumber')?.invalid && form.get('phoneNumber')?.touched">شماره همراه را وارد کنید.</span>
           </div>
           <div class="field d-flex flex-column gap-1">
             <label class="form-label m-0 fw-bold">کد امنیتی</label>
@@ -29,7 +29,7 @@
                 </div>
               </div>
             </div>
-            <span data-type="input-validation-alert"></span>
+            <span data-type="input-validation-alert" *ngIf="form.get('captchaCode')?.invalid && form.get('captchaCode')?.touched">کد امنیتی را وارد کنید.</span>
           </div>
           <div class="field mt-4">
             <button type="submit" class="w-100" data-type="primary-button">دریافت کد</button>
