--- a/src/components/reset-password/reset-password.component.html
+++ b/src/components/reset-password/reset-password.component.html
@@ -9,34 +9,40 @@
         <div class="field d-flex flex-column gap-1">
           <label for="otpCode" class="form-label m-0 fw-bold">کد دریافتی</label>
           <input type="text" class="form-control m-0" id="otpCode" placeholder="کد دریافتی" formControlName="otpCode">
-          <span data-type="input-validation-alert"></span>
+          <span data-type="input-validation-alert" *ngIf="form.get('otpCode')?.invalid && form.get('otpCode')?.touched">کد امنیتی را وارد کنید.</span>
         </div>
-        <input-password [label]="'رمز عبور جدید'" [placeholder]="'رمز عبور جدید'" formControlName="newPassword"></input-password>
-        <input-password [label]="'تکرار رمز عبور جدید'" [placeholder]="'تکرار رمز عبور جدید'" formControlName="repeatNewPassword"></input-password>
-        <div class="field d-flex flex-column gap-1">
-          <label for="captchaCode" class="form-label m-0 fw-bold">کد امنیتی</label>
-          <div class="captcha-field form-control container py-0">
-            <div class="row d-flex align-items-center justify-content-between">
-              <div class="col-4 input-container d-flex flex-column">
-                <input type="text" class="h-100" id="captchaCode" placeholder="کد امنیتی" formControlName="captchaCode">
-              </div>
-              <div class="col-8 d-flex align-items-center justify-content-end px-0">
-                <div class="col-10 captcha-image p-0">
-                  <img class="img-fluid" src="../../../assets/images/captcha.png" height="48" width="180" alt="تصویر امنیتی" />
+        <div class="field d-flex flex-column gap-0">
+          <input-password [label]="'رمز عبور جدید'" [placeholder]="'رمز عبور جدید'" formControlName="newPassword"></input-password>
+          <span data-type="input-validation-alert" *ngIf="form.get('newPassword')?.invalid && form.get('newPassword')?.touched">رمز عبور را وارد کنید.</span>
+        </div>
+        <div class="field d-flex flex-column gap-0">
+          <input-password [label]="'تکرار رمز عبور جدید'" [placeholder]="'تکرار رمز عبور جدید'" formControlName="repeatNewPassword"></input-password>
+          <span data-type="input-validation-alert" *ngIf="form.get('repeatNewPassword')?.invalid && form.get('repeatNewPassword')?.touched">رمز عبور را وارد کنید.</span>
+        </div>
+          <div class="field d-flex flex-column gap-1">
+            <label for="captchaCode" class="form-label m-0 fw-bold">کد امنیتی</label>
+            <div class="captcha-field form-control container py-0">
+              <div class="row d-flex align-items-center justify-content-between">
+                <div class="col-4 input-container d-flex flex-column">
+                  <input type="text" class="h-100" id="captchaCode" placeholder="کد امنیتی" formControlName="captchaCode">
                 </div>
-                <div class="col-2 refresh-captcha d-flex justify-content-center">
-                  <a class="refresh-captcha d-flex justify-content-center col-2">
-                    <i class="bi bi-arrow-clockwise"></i>
-                  </a>
+                <div class="col-8 d-flex align-items-center justify-content-end px-0">
+                  <div class="col-10 captcha-image p-0">
+                    <img class="img-fluid" src="../../../assets/images/captcha.png" height="48" width="180" alt="تصویر امنیتی" />
+                  </div>
+                  <div class="col-2 refresh-captcha d-flex justify-content-center">
+                    <a class="refresh-captcha d-flex justify-content-center col-2">
+                      <i class="bi bi-arrow-clockwise"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
+            <span data-type="input-validation-alert" *ngIf="form.get('captchaCode')?.invalid && form.get('captchaCode')?.touched">کد امنیتی را وارد کنید.</span>
           </div>
-          <span data-type="input-validation-alert"></span>
-        </div>
-        <div class="field mt-4">
-          <button type="submit" class="w-100" data-type="primary-button">تایید</button>
-        </div>
+          <div class="field mt-4">
+            <button type="submit" class="w-100" data-type="primary-button">تایید</button>
+          </div>
       </form>
       <div>
         <p class="d-flex justify-content-center mt-3">
