--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -9,28 +9,31 @@
         <form class="authentication-form d-flex flex-column gap-3" [formGroup]="form" (ngSubmit)="onSubmit()">
           <div class="field d-flex flex-column gap-1">
             <label for="username" class="form-label m-0 fw-bold">نام کاربری</label>
-            <input type="text" id="username" class="form-control m-0" formControlName="username" placeholder="نام کاربری">
-            <span data-type="input-validation-alert"></span>
+            <input type="text" id="username" class="form-control m-0" [ngClass]="{'invalid-input': form.get('username')?.invalid && form.get('username')?.touched}" formControlName="username" placeholder="نام کاربری">
+            <span data-type="input-validation-alert" *ngIf="form.get('username')?.invalid && form.get('username')?.touched">نام کاربری را وارد کنید.</span>
           </div>
-          <input-password formControlName="password"></input-password>
+          <div class="field d-flex flex-column gap-0">
+            <input-password formControlName="password" [ngClass]="{'invalid-input': form.get('password')?.invalid && form.get('password')?.touched}"></input-password>
+            <span data-type="input-validation-alert" *ngIf="form.get('password')?.invalid && form.get('password')?.touched">رمز عبور را وارد کنید.</span>
+          </div>
           <div class="field d-flex flex-column gap-1">
             <label class="form-label m-0 fw-bold">کد امنیتی</label>
             <div class="captcha-field form-control container py-0">
-              <div class="row d-flex align-items-center justify-content-between">
-                <div class="col-4 input-container d-flex flex-column">
-                  <input class="h-100" type="text" formControlName="captchaCode" placeholder="کد امنیتی">
+              <div class="mn row d-flex align-items-center justify-content-between">
+                <div class="mnm col-4 input-container d-flex flex-column">
+                  <input class="h-100" [ngClass]="{'invalid-input': form.get('captchaCode')?.invalid && form.get('captchaCode')?.touched}" type="text" formControlName="captchaCode" placeholder="کد امنیتی">
                 </div>
                 <div class="col-8 d-flex align-items-center justify-content-end px-0">
                   <div class="col-10 captcha-image p-0">
                     <img class="img-fluid" src="../../../assets/images/captcha.png" height="48" width="180" alt="تصویر امنیتی" />
                   </div>
-                    <a class="refresh-captcha d-flex justify-content-center col-2">
-                      <i class="bi bi-arrow-clockwise"></i>
-                    </a>
+                  <a class="refresh-captcha d-flex justify-content-center col-2">
+                    <i class="bi bi-arrow-clockwise"></i>
+                  </a>
                 </div>
               </div>
             </div>
-            <span data-type="input-validation-alert"></span>
+            <span data-type="input-validation-alert" *ngIf="form.get('captchaCode')?.invalid && form.get('captchaCode')?.touched">کد امنیتی را وارد کنید.</span>
           </div>
           <div class="field mt-4">
             <button type="submit" class="w-100" data-type="primary-button">ورود</button>
