create sidebar and header components

--- a/src/components/dashboard/dashboard.component.html
+++ b/src/components/dashboard/dashboard.component.html
@@ -1,1 +1,11 @@
-<p>dashboard works!</p>
+<div class="row">
+  <div class="col-2">
+    <sidebar></sidebar>
+  </div>
+  <div class="col-10">
+    <div class="container">
+      <header></header>
+      <p>here goes the page content</p>
+    </div>
+  </div>
+</div>
