--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,12 +1,15 @@
-<div class="d-flex flex-column bg-dark text-light vh-100 h-100 px-3 py-4">
-  <img src="../assets/images/logo.png" class="align-self-center" height="120" />
-  <ul *ngFor="let menuItem of menuItems">
-    <li>
-      <a>{{menuItem.label}}</a>
-    </li>
-  </ul>
-  <a class="mt-auto">
-    <i class="bi bi-box-arrow-right"></i>
-    <span>خروج</span>
+<nav class="navbar d-flex flex-column align-items-start vh-100 px-4 py-5">
+  <div class="d-flex flex-column gap-5 w-100">
+    <a class="navbar-brand mx-0 text-center">
+      <img src="../assets/images/Mobin-Logo-White.png" height="50" />
+    </a>
+    <ul class="navbar-nav">
+      <li class="nav-item mt-2" *ngFor="let menuItem of menuItems">
+        <a class="nav-link d-flex gap-4" href="#"> <i class={{menuItem.icon}}></i> <span class="sr-only">{{menuItem.label}}</span></a>
+      </li>
+    </ul>
+  </div>
+  <a class="nav-link d-flex gap-4" href="#">
+    <i class="bi bi-box-arrow-right"></i><span>خروج</span>
   </a>
-</div>
+</nav>
