--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,11 +1,7 @@
-<div class="row">
-  <div class="col-2">
+<div class="d-flex">
     <sidebar></sidebar>
-  </div>
-  <div class="col-10">
-    <div class="container">
+    <div>
       <header></header>
       <p>here goes the page content</p>
     </div>
-  </div>
 </div>
