--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -3,6 +3,11 @@
   width: 18rem;
 }
 
+.navbar.open {
+  visibility: visible;
+  right: 0;
+}
+
 .navbar.shrank {
   width: 5rem;
 }
@@ -43,4 +48,14 @@
 
 .navbar i {
   font-size: 20px;
+}
+
+
+@media(max-width: 1200px) {
+
+  .navbar {
+    visibility: hidden;
+    position: absolute;
+    right: -18rem;
+  }
 }
