add close sidebar event and add animations

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,16 +1,17 @@
-  <nav class="navbar d-flex flex-column align-items-start vh-100 px-4 py-5" [ngClass]="(!sidebarExpanded && screenWidth>1200) ? 'shrank' : (sidebarOpened && screenWidth<1200) ? 'open' : ''" >
-    <div class="d-flex flex-column gap-5 w-100">
-      <a class="navbar-brand mx-0 text-center">
-        <img src="../assets/images/Mobin-Logo-White.png" class="large-logo" height="50" />
-        <img src="../assets/images/Logo.png" class="small-logo" height="40" />
-      </a>
-      <ul class="navbar-nav" id="navbarSupportedContent">
-        <li class="nav-item mt-2" *ngFor="let menuItem of menuItems">
-          <a class="nav-link d-flex gap-4" href="#"><i class={{menuItem.icon}}></i> <span>{{menuItem.label}}</span></a>
-        </li>
-      </ul>
-    </div>
-    <a class="nav-link d-flex gap-4" href="#">
-      <i class="bi bi-box-arrow-right"></i><span>خروج</span>
+<div class="sidebar-overlay" (click)="closeSidebar()" [ngClass]="(hasOverlay && screenWidth<1200) ? 'active' : ''"></div>
+<nav class="navbar d-flex flex-column align-items-start vh-100 px-4 py-5" [ngClass]="(!sidebarExpanded && screenWidth>1200) ? 'shrank' : (sidebarOpened && screenWidth<1200) ? 'open' : ''">
+  <div class="d-flex flex-column gap-5 w-100">
+    <a class="navbar-brand mx-0 text-center">
+      <img src="../assets/images/Mobin-Logo-White.png" class="large-logo" height="50" />
+      <img src="../assets/images/Logo.png" class="small-logo" height="40" />
     </a>
-  </nav>
+    <ul class="navbar-nav" id="navbarSupportedContent">
+      <li class="nav-item mt-2" *ngFor="let menuItem of menuItems">
+        <a class="nav-link d-flex gap-4" href="#"><i class={{menuItem.icon}}></i> <span>{{menuItem.label}}</span></a>
+      </li>
+    </ul>
+  </div>
+  <a class="nav-link d-flex gap-4" href="#">
+    <i class="bi bi-box-arrow-right"></i><span>خروج</span>
+  </a>
+</nav>
