--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="sidebar-overlay" (click)="closeSidebar()" [ngClass]="(hasOverlay && screenWidth<1200) ? 'active' : ''"></div>
-<nav class="navbar d-flex flex-column align-items-start vh-100 px-4 py-5" [ngClass]="(!sidebarExpanded && screenWidth>1200) ? 'shrank' : (sidebarOpened && screenWidth<1200) ? 'open' : ''">
+<aside class="navbar d-flex flex-column align-items-start vh-100 px-4 py-5" [ngClass]="(!sidebarExpanded && screenWidth>1200) ? 'shrank' : (sidebarOpened && screenWidth<1200) ? 'open' : ''">
   <div class="d-flex flex-column gap-5 w-100">
     <a class="navbar-brand mx-0 text-center">
       <img src="../assets/images/Mobin-Logo-White.png" class="large-logo" height="50" />
@@ -14,4 +14,4 @@
   <a class="nav-link d-flex gap-4" href="#">
     <i class="bi bi-box-arrow-right"></i><span>خروج</span>
   </a>
-</nav>
+</aside>
