--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex">
   <sidebar></sidebar>
-  <div>
+  <div class="d-flex flex-column w-100 p-3">
     <header></header>
     <p>here goes the page content</p>
   </div>
