--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,7 @@ body {
   font-size: 16px;
   color: var(--text-color-dark);
   overflow: hidden;
+  background: var(--main-background);
 }
 
 ul {
