--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light justify-content-between rounded-4 py-2 px-3">
+<nav class="navbar navbar-expand-lg bg-light justify-content-between rounded-2 py-2 px-3">
   <ul class="navbar-nav d-flex mr-auto">
     <li class="nav-item">
       <a class="nav-link" href="#" (click)="onToggleSidebar()"><i class="bi bi-list"></i></a>
@@ -15,16 +15,16 @@
   </ul>
   <div class="d-flex">
     <div class="dropdown">
-      <button class="btn dropdown-toggle px-0" type="button" id="dropdownMenuButton" data-toggle="dropdown">
-        بهارک بختیاری
+      <button class="btn dropdown-toggle d-flex rounded-2 border-0 gap-1 px-2 py-1" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+        <i class="bi bi-person"></i>
+        <span>بهارک بختیاری</span>
       </button>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <div class="dropdown-menu shadow text-end" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item" href="#">حساب کاربری</a>
         <a class="dropdown-item" href="#">فراموشی رمز عبور</a>
         <a class="dropdown-item" href="#">تاریخچه ورود و خروج</a>
       </div>
     </div>
-    <img src="../assets/images/profile-pic.jpg" class="rounded-4" width="40" />
   </div>
 </nav>
 
