restructure project files

--- a/src/app/components/admin/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/components/admin/dashboard-layout/dashboard-layout.component.html
@@ -2,6 +2,6 @@
   <sidebar></sidebar>
   <div class="d-flex flex-column w-100 p-3">
     <header></header>
-    <p>here goes the page content</p>
+    <router-outlet></router-outlet>
   </div>
 </div>
