--- a/src/app/components/admin/header/header.component.html
+++ b/src/app/components/admin/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light justify-content-between rounded-2 py-2 px-3">
+<nav class="navbar navbar-expand bg-light justify-content-between rounded-2 py-2 px-3">
   <ul class="navbar-nav d-flex mr-auto">
     <li class="nav-item">
       <a class="nav-link" href="#" (click)="onToggleSidebar()"><i class="bi bi-list"></i></a>
