--- a/src/app/components/admin/header/header.component.scss
+++ b/src/app/components/admin/header/header.component.scss
@@ -25,6 +25,7 @@
   border-radius: 0 0 0.375rem 0.375rem;
   border-top: 2px solid var(--secondary-color);
   margin-top: 15px;
+  z-index: 1000;
 
   a {
     background: none;
