refactor ng classes

--- a/src/app/components/admin/header/header.component.html
+++ b/src/app/components/admin/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand bg-light justify-content-between rounded-2 py-2 px-3">
   <ul class="navbar-nav d-flex mr-auto">
     <li class="nav-item">
-      <a class="nav-link" href="#" (click)="onToggleSidebar()"><i class="bi bi-list"></i></a>
+      <a class="nav-link" (click)="onToggleSidebar()"><i class="bi bi-list"></i></a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#"><i class="bi bi-bell"></i></a>
