--- a/src/app/components/admin/sidebar/sidebar.component.html
+++ b/src/app/components/admin/sidebar/sidebar.component.html
@@ -1,6 +1,7 @@
-<div class="sidebar-overlay" (click)="closeSidebar()" [ngClass]="(hasOverlay && screenWidth<1200) ? 'active' : ''"></div>
+<div class="sidebar-overlay" (click)="closeSidebar()" [class.active]="hasOverlay && screenWidth<1200"></div>
 <aside class="navbar d-flex flex-column align-items-start vh-100 px-4 py-5"
-       [ngClass]="(!sidebarExpanded && screenWidth>1200) ? 'shrank' : (sidebarOpened && screenWidth<1200) ? 'open' : ''">
+       [class.shrank]="!sidebarExpanded && screenWidth>1200"
+       [class.open]="sidebarOpened && screenWidth<1200">
   <div class="d-flex flex-column gap-5 w-100">
     <a class="navbar-brand mx-0 text-center">
       <img src="../assets/images/Mobin-Logo-White.png" class="large-logo" height="55" />
