--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -31,7 +31,7 @@
   --primary-color: #363062;
   --secondary-color: #F99417;
   --secondary-background: #4D4C7D;
-  --main-background: #ebebf3; /*white for light themes*/
+  --main-background: #ededee; /*white for light themes*/
   --text-color-dark: #2C3333; /*dark gray for light themes*/
   --text-color-light: #e2e2e2; /*dark gray for light themes  #CBE4DE */
   --light-gray: #e2e2e2; /*light gray*/
