--- a/src/app/components/admin/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/components/admin/dashboard-layout/dashboard-layout.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex">
   <sidebar></sidebar>
-  <div class="d-flex flex-column w-100 vh-100 p-3">
+  <div class="d-flex flex-column w-100 vh-100">
     <header></header>
     <router-outlet></router-outlet>
   </div>
