--- a/src/app/components/admin/header/header.component.scss
+++ b/src/app/components/admin/header/header.component.scss
@@ -9,14 +9,17 @@
 
 .btn.dropdown-toggle {
   background: var(--main-background);
+  border: none;
 
   &:hover,
   &:focus {
     color: var(--secondary-color);
+    border: 1px solid var(--secondary-color);
   }
 
   &::after {
     display: none;
+    border: 1px solid var(--secondary-color);
   }
 }
 
@@ -24,6 +27,7 @@
   border: none;
   border-radius: 0 0 0.375rem 0.375rem;
   border-top: 2px solid var(--secondary-color);
+  padding-left:30px;
   margin-top: 15px;
   z-index: 1000;
 
@@ -34,4 +38,10 @@
       color: var(--secondary-color);
     }
   }
+}
+
+.user-status-badge {
+  padding: 5px;
+  bottom: -5px;
+  left: 30px;
 }
