--- a/src/app/components/admin/header/header.component.html
+++ b/src/app/components/admin/header/header.component.html
@@ -13,12 +13,16 @@
       <a class="nav-link" href="#"><i class="bi bi-search"></i></a>
     </li>
   </ul>
-  <div class="d-flex">
+  <div class="d-flex gap-3">
+    <button class="btn py-0 px-2" data-type="primary-button">
+      <span>+</span>
+      تیکت جدید
+    </button>
     <div class="dropdown">
       <button class="btn dropdown-toggle d-flex rounded-circle gap-1 px-2 py-1 position-relative" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
         <i class="bi bi-person"></i>
         <span class="position-absolute translate-middle bg-success border border-light rounded-circle user-status-badge">
-          <span class="visually-hidden">New alerts</span>
+          <span class="visually-hidden"></span>
         </span>
       </button>
       <div class="dropdown-menu shadow text-end" aria-labelledby="dropdownMenuButton">
