--- a/src/app/components/admin/header/header.component.scss
+++ b/src/app/components/admin/header/header.component.scss
@@ -14,7 +14,7 @@
   &:hover,
   &:focus {
     color: var(--secondary-color);
-    border: 1px solid var(--secondary-color);
+    outline: 1px solid var(--secondary-color);
   }
 
   &::after {
