--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -28,8 +28,8 @@
 /* ***Colors*** */
 
 :root[data-theme="default"] {
-  --primary-color: #363062;
-  --secondary-color: #F99417;
+  --primary-color: #4d2c8b;
+  --secondary-color: #E69A19;
   --secondary-background: #4D4C7D;
   --main-background: #ededee; /*white for light themes*/
   --text-color-dark: #2C3333; /*dark gray for light themes*/
