--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,6 +62,28 @@ a {
   }
 }
 
+[data-type="tooltip"] {
+  position: relative;
+  display: inline-block;
+
+  .tooltiptext {
+    visibility: hidden;
+    background-color: rgb(0, 0, 0, 0.8);
+    width: max-content;
+    color: white;
+    margin-right: 5px;
+    padding: 5px 7px;
+    border-radius: 5px;
+    position: absolute;
+    z-index: 1;
+  }
+
+  &:hover .tooltiptext {
+    visibility: visible;
+  }
+}
+
+
 .authentication-form {
   padding: 3rem 2rem;
 }
