--- a/src/app/components/admin/dashboard-pages/home/home.component.html
+++ b/src/app/components/admin/dashboard-pages/home/home.component.html
@@ -66,4 +66,30 @@
       </div>
     </div>
   </div>
+  <div class="d-flex flex-column justify-content-between">
+    <ul class="nav nav-pills mb-3" id="pills-tab">
+      <li class="nav-item">
+        <button class="nav-link active" id="created" data-bs-toggle="pill" data-bs-target="#pills-created">ایجاد شده</button>
+      </li>
+      <li class="nav-item">
+        <button class="nav-link" id="response-due" data-bs-toggle="pill" data-bs-target="#pills-response-due">موعد انجام امروز</button>
+      </li>
+      <li class="nav-item">
+        <button class="nav-link" id="pending" data-bs-toggle="pill" data-bs-target="#pills-pending">در حال انجام</button>
+      </li>
+      <li class="nav-item">
+        <button class="nav-link" id="finished" data-bs-toggle="pill" data-bs-target="#pills-finished">انجام شده</button>
+      </li>
+      <li class="nav-item">
+        <button class="nav-link" id="closed" data-bs-toggle="pill" data-bs-target="#pills-closed">بسته شده</button>
+      </li>
+    </ul>
+    <div class="tab-content" id="pills-tabContent">
+      <div class="tab-pane fade show active" id="pills-created">ایجاد شده</div>
+      <div class="tab-pane fade" id="pills-response-due">موعد انجام امروز</div>
+      <div class="tab-pane fade" id="pills-pending">در حال انجام</div>
+      <div class="tab-pane fade" id="pills-finished">انجام شده</div>
+      <div class="tab-pane fade" id="pills-closed">بسته شده</div>
+    </div>
+  </div>
 </section>
