--- a/src/app/components/admin/dashboard-pages/home/home.component.html
+++ b/src/app/components/admin/dashboard-pages/home/home.component.html
@@ -97,5 +97,22 @@
       <div class="tab-pane fade" id="pills-finished">انجام شده</div>
       <div class="tab-pane fade" id="pills-closed">بسته شده</div>
     </div>
+    <nav class="d-flex justify-content-center table-pagination align-self-center" dir="ltr">
+      <ul class="pagination bg-light">
+        <li class="page-item">
+          <a class="page-link" href="#">
+            <span><i class="bi bi-chevron-right"></i></span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Next">
+            <span><i class="bi bi-chevron-left"></i></span>
+          </a>
+        </li>
+      </ul>
+    </nav>
   </div>
 </section>
