--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,10 +3,6 @@
 @import "styles/variables.scss";
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 
-:root {
-  --ag-wrapper-border-radius: 8px
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -20,6 +16,16 @@ body {
   color: var(--text-color-dark);
   overflow: hidden;
   background: var(--main-background);
+}
+
+.ag-theme-quartz {
+  --ag-wrapper-border-radius: 0;
+  --ag-header-background-color: var(--main-background);
+  --ag-background-color: #F8F9FA;
+}
+
+.ag-ltr {
+  direction: rtl;
 }
 
 ul {
@@ -182,7 +188,6 @@ a {
 .invalid-input input {
   border-color: red;
 }
-
 /* RESPONSIVE */
 
 @media(max-width: 992px) {
@@ -203,3 +208,4 @@ a {
     }
   }
 }
+
