create tickets component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,7 @@ body {
   --ag-wrapper-border-radius: 0;
   --ag-header-background-color: var(--main-background);
   --ag-background-color: #F8F9FA;
+  --ag-borders: none;
 }
 
 .ag-ltr {
@@ -208,4 +209,3 @@ a {
     }
   }
 }
-
